--- a/src/App.css
+++ b/src/App.css
@@ -1,113 +1,38 @@
-*{
-  font-size: 13px;
-}
-
-.flex-row{
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-column{
-  display: flex;
-  flex-direction: column;
-}
-
 .App {
-  text-align: left;
-  margin: 0;
-  width: 100vw;
-  height: 100vh;
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  align-items: flex-start;
-  justify-content: flex-start;
-  color: white;
-  font-size: 22px;
-  border-bottom: 1px solid #282c34;
   background-color: #282c34;
-}
-
-.App-header_Name {
+  min-height: 100vh;
   display: flex;
-  padding:0.7rem 0.5rem;
-
-}
-
-.side-Nav_label{
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-items: flex-start;
-  height: 2.5rem;
-}
-
-.side-Nav_content{
-  height: 85.4vh;
-  padding: 0.5rem 0;
-}
-
-.side-Nav_actions{
-  height: 2rem;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.side-Nav_header,
-.side-Nav{
-  width: 15%;
-  padding: 0.5rem 0.7rem;
-  background-color: #3c444c;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.main-Content {
-  width: 85%;
-  align-items: center;
+.App-link {
+  color: #61dafb;
 }
 
-.main-Content_title{
-  width:100%;
-  padding: 0.5rem 1rem;
-
-}
-
-.main-Content_header-Name,
-.main-Content_header-List{
-  width: 100%;
-}
-
-.main-Content_header-List{
-  justify-content: flex-end;
-}
-
-
-.content_Header{
-  width: 100%;
-}
-
-.content header > .side-Nav_header{
-  height: 100%;
-}
-
-.content{
-  width:100%;
-}
-
-.content-Header_name,
-.content-Header_list{
-  width: 20%;
-}
-
-.content-placeholder{
-  height: 75vh;
-  width: 100%;
-  border:3px dashed gray;
-  border-radius:1rem;
-  padding:0.5rem;
-
-}
-
-.content-footer{
-  padding: 1rem 1rem ;
-  width: 100%;
-  height: 10.2vh;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
